syntax = "proto3";
import "user_stock.proto";
package pb;

option go_package = "github.com/RoyceAzure/go-stockinfo-broker/shared/pb";

message GetUserStockRequest{
    int32 page_size=1;
    int32 page=2;
}
message GetUserStockResponseDTO{
    int64 user_id=1;
    int64 stock_id = 2;
    string stock_code=3;
    string stock_name=4;
    int32 quantity = 5;
    string purchase_price_per_share = 6;
}

message GetUserStockResponse{
    repeated GetUserStockResponseDTO data=1;
}

message GetUserStockByIdRequest{
    int64 user_id=1;
}
message GetUserStockBuIdResponse{
    repeated UserStock data=1;
}


